# cellworld_python

./: CMakeLists.txt  build-linux.sh  build.ps1  setup.py  test.sh
include/: cellworld_pose.h  cellworld_python.h
src/: cellworld_python.cpp
